--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <link rel='stylesheet' href='style.css'>
 <h1>welcome to my website.</h1>
 <p>yay!</p>
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
+
 
 </body>
 </html>
