--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <meta charset='UTF-8'/>
 <head>
-<title>My git site</title>
+<title>My git g site</title>
 </head>
 <body>
  <script src='script.js'></script>
