--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <html>
 <meta charset='UTF-8'/>
 <head>
-<title>My git g site</title>
+<title>My git site</title>
 </head>
 <body>
  <script src='script.js'></script>
 <link rel='stylesheet' href='style.css'>
 <h1>welcome to my website.</h1>
 <p>yay!</p>
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
-
-<p id="demo"></p>
-
 
 </body>
 </html>
