--- a/secret/error/index.html
+++ b/secret/error/index.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html lang='en'>
+<html>
+<meta charset='UTF-8'/>
+<head>
+<title>My git site</title>
+</head>
+<body>
+ <script src='script.js'></script>
+<link rel='stylesheet' href='style.css'>
+<h1>WOOPS!</h1>
+<p>try something else than that.</p>
+</body>
+</html>
