--- a/index.html
+++ b/index.html
@@ -11,4 +11,23 @@
 <h1>welcome to my website.</h1>
 <p>yay!</p>
 </body>
+ <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.3/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDzcJd3TuRSwHXZYTs335-sMxqHbkd2tbw",
+    authDomain: "core-catalyst-353612.firebaseapp.com",
+    projectId: "core-catalyst-353612",
+    storageBucket: "core-catalyst-353612.appspot.com",
+    messagingSenderId: "969350463426",
+    appId: "1:969350463426:web:e5c2cd793b570997c7a05b"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </html>
