--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
  <script src='script.js'></script>
 <link rel='stylesheet' href='style.css'>
 <h1>welcome to my website.</h1>
-<p>OLIVER IS MY BAE</p>
+<p>Hello! This is my website.</p>
 </body>
 </html>
